--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -3,10 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    }},
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQlLiteDatabase": "Data Source=SQlLiteDatabase;Initial Catalog=RijsatDb;Integrated Security=True;Connect Timeout=60;TrustServerCertificate=True"
+    "DefaultConnection": "Host=localhost;Database=to_do_list;Username=postgres;Password=159357"
   }
 }
