--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -6,6 +6,10 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.4.4" />
+      <PackageReference Include="MailKit" Version="3.6.0" />
+      <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+      <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
+      <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.2.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
         <PrivateAssets>all</PrivateAssets>
@@ -21,7 +25,7 @@
     </ItemGroup>
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
