--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=to_do_list;Username=postgres;Password=159357",
+    "DefaultConnection": "Host=localhost;Database=to_do_list;Username=postgres;Password=Dll4523",
     "WebUIContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebUI;Trusted_Connection=True;MultipleActiveResultSets=true",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebUI;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
